force-app/main/default/objects/sked__Region_Area__c/sked__Region_Area__c.object-meta.xml
<CustomObject>
    <description>Contains geographical data for a region</description>
    <label>Region Area</label>
    <nameField>
        <displayFormat>RT-{0}</displayFormat>
        <label>Region Area Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Region Areas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>