force-app/main/default/objects/sked__Region_Area__c/fields/sked__End__c.field-meta.xml
<CustomField>
    <fullName>sked__End__c</fullName>
    <label>End</label>
    <length>60</length>
    <type>Text</type>
</CustomField>