force-app/main/default/objects/sked__Region_Area__c/fields/sked__Region__c.field-meta.xml
<CustomField>
    <fullName>sked__Region__c</fullName>
    <label>Region</label>
    <referenceTo>sked__Region__c</referenceTo>
    <relationshipLabel>Region Areas</relationshipLabel>
    <relationshipName>Region_Areas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>