force-app/main/default/objects/sked__Region_Area__c/fields/sked__Start__c.field-meta.xml
<CustomField>
    <fullName>sked__Start__c</fullName>
    <label>Start</label>
    <length>60</length>
    <type>Text</type>
</CustomField>