force-app/main/default/objects/sked__Region_Area__c/fields/sked__Type__c.field-meta.xml
<CustomField>
    <fullName>sked__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Postcode</fullName>
            </value>
            <value>
                <fullName>Suburb</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>